--- a/templates/login.html
+++ b/templates/login.html
@@ -3,6 +3,12 @@
 <head>
     <title>Login Page</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <style>
+    form label {
+        display: block;
+        margin-bottom: 2px;
+    }
+    </style>
 </head>
 <body>
     <div class= "title">
@@ -10,11 +16,6 @@
     </div>
     <div class = "form_container">
         <form method="POST" action="/login">
-            <!--- Can delete
-            <input type="radio" name="user_type" value="parent"> Parent
-            <input type="radio" name="user_type" value="child"> Child
-            <br><br>
-            -->
             
             <label for="account_id">Account ID:</label>
             <input type="text" name="account_id" id="account_id" required>
