--- a/static/style.css
+++ b/static/style.css
@@ -4,12 +4,16 @@
 :root {
     --background-color: #b7deeb;
     --button-color: #7597d1;
+    --text-color: #2a50b1;
 }
 
 body {
     background-color: var(--background-color);
     margin: 0;
     padding: 0;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 
@@ -24,39 +28,41 @@ body {
 .title h1{
     font-size: 4rem;
     font-family: 'Phudu', cursive;
-    background-color: #111;
-    background-image: linear-gradient(to right, #b7deeb, #738ad6, #2820c9);
-    background-size: 200%;
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -moz-text-fill-color: transparent;
-
-    background-position: -100%;
-
-    animation: animatedText 1s infinite alternate-reverse;
-    z-index: 2;
+    color: #2a50b1;
 }
+
 
 .description {
     font-family: 'Nunito Sans', sans-serif;
     background-color: rgb(255, 255, 255);
     text-align: center;
+    border-radius: 10px;
     margin: 10px;
     margin-left: 40px;
     margin-right: 40px;
-    margin-top: 40px;
+}
+
+.description p{
+    margin: 10px;
+    margin-left: 40px;
+    margin-right: 40px;
     padding: 10px;
-    border-radius: 10px;
+}
+
+.description h2 {
+    margin-left: 40px;
+    margin-right: 40px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .btn_container{
     text-align: center;
 }
 
-.button{
-    width: 140px;
-    height: 45px;
+.button, input[type="submit"], input[type="login"]{
+    width: 120px;
+    height: 30px;
     font-family: 'Nunito Sans', sans-serif;
     font-size: 11px;
     text-transform: uppercase;
@@ -72,6 +78,7 @@ body {
     padding: 10px;
     text-decoration: none;
     transition: background-color 300ms ease, color 300ms ease;
+    margin-bottom: 20px;
 }
 
 .button a {
@@ -80,8 +87,8 @@ body {
     font-family: 'Nunito Sans', sans-serif;
 }
 
-.button:hover {
-    background-color: #3c60bd;
+.button:hover, input[type="submit"]:hover, input[type="login"]:hover {
+    background-color: var(--text-color);
     box-shadow: 0px 15px 20px rgb(255, 255, 255);
     color: #fff;
     transform: translateY(-7px);
@@ -89,26 +96,231 @@ body {
 }
 
 
-.form_container{
+.form_container {
     font-family: 'Nunito Sans', sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: rgb(255, 255, 255);
     align: center;
     margin: 10px;
-    margin-left: 40px;
-    margin-right: 40px;
-    margin-top: 40px;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 30px;
+    margin-bottom: 30px;
     padding: 10px;
     border-radius: 10px;
 }
 
-.forn_container label {
+.form_container label{
     font-family: 'Nunito Sans', sans-serif;
+    font-size: 8px;
+    color: #3c60bd
 }
 
 .footer_content {
+    position: fixed;
+    bottom: 0;
     background-color: aliceblue;
     font-family: 'Nunito Sans', sans-serif;
+    font-size: 8px;
+    text-align: center;
+    width: 100%;
 }
+
+.footer_content p {
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.title_container {
+    display:flex;
+    justify-content: space-between;
+}
+
+.parentBalance, .childBalance{
+  flex: 1;
+  padding-bottom: 100%;
+  min-width: 0;
+  margin: 0;
+  padding: 10px;
+  box-sizing: border-box;
+}
+
+.parentBalance, .childBalance {
+    font-size: 4rem;
+    font-family: 'Phudu', cursive;
+    color: #2a50b1;
+    background-color: rgb(255, 255, 255);
+    text-align: center;
+    border-radius: 10px;
+    margin: 10px;
+    margin-left: 40px;
+    margin-right: 40px;
+}
+
+.popup{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 300px;
+    display: none;
+    background: #fff;
+    border-radius:6px;
+    text-align:center;
+    color: #333;
+    z-index:999;
+}
+/* CSS for the popup content */
+.popup-content {
+  background-color: white;
+  font-family: 'Nunito Sans', sans-serif;
+  padding: 20px;
+  border-radius: 5px;
+  text-align: center;
+}
+
+/* CSS for showing the popup */
+.open-popup {
+  display: flex;
+}
+
+.open-popup{
+    visibility: visible;
+}
+
+.funcButtonContainer{
+  text-align: center;
+}
+
+.funcButton {
+  font-family: 'Nunito Sans', sans-serif;
+  background-color: var(--button-color);
+  padding: 30px;
+  width: 300px;
+  height: 100px;
+  align-items: center;
+  cursor: pointer;
+}
+
+.popButton{
+  font-family: 'Nunito Sans', sans-serif;
+  border-radius: 4px;
+  background-color: var(--button-color);
+  height: 20px;
+  text-align: center;
+  cursor: pointer;
+}
+
+.period_dropdown {
+  font-family: 'Nunito Sans', sans-serif;
+}
+
+.select_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin: 0 auto;
+  max-width: 400px;
+}
+
+.select_container h2{
+  font-family: 'Nunito Sans', sans-serif;
+}
+
+.select_button {
+  width: 100%;
+  max-width: 200px;
+  padding: 10px;
+  margin: 10px 0;
+  background-color:var(--button-color);
+  color: #fff;
+  font-size: 16px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.select_button:hover {
+  background-color: #3c60bd;
+}
+
+.select_dropdown {
+  width: 100%;
+  max-width: 200px;
+  padding: 10px;
+  margin: 10px 0;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+}
+
+
+.pig {
+    width: 200px;
+    height: 200px;
+    animation-name:flying;
+    animation-duration:10s;
+    animation-timing-function:linear;
+    animation-iteration-count:infinite;
+  }
+  
+  .pig-container {
+    position: absolute;
+    margin-top: 80px;
+    width: 300px;
+    height: 300px;
+    top: 20%; 
+    right: 0;
+    animation-name:floating;
+    animation-duration:1s;
+    animation-timing-function:ease-in-out;
+    animation-iteration-count:infinite;
+    animation-direction:alternate;
+  }
+  
+  @keyframes flying{
+    0%{
+      transform: translateX(60vw);
+    }
+    100%{
+      transform: translateX(-110vw);
+    }
+  }
+  
+  @keyframes floating{
+    to{
+      transform: translateY(50px);
+    }
+    from{
+      transform: translateY(-50px);
+    }
+  }
+  
+  #front-wing, #back-wing {
+    animation-name:flap;
+    animation-duration:0.1s;
+    animation-iteration-count:infinite;
+    animation-direction:alternate;
+    transform-box:fill-box;
+    transform-origin:bottom left;
+  }
+  
+  @keyframes flap{
+    to{
+      transform:rotate(-10deg)
+    }
+    from{
+      transform:rotate(60deg)
+    }
+  }
+  
+  #back-wing {
+    animation-delay:0.02s;
+  }
 
 
 
